--- a/OMPWebApp/Components/App.razor
+++ b/OMPWebApp/Components/App.razor
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="OMPWebApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
     <HeadOutlet />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode=RenderMode.InteractiveServer />
     <script src="_framework/blazor.web.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 </body>
 
 </html>
+
+
